deployments/apps/forge_miscellaneous/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forge-miscellaneous-develop
