deployments/apps/forge_miscellaneous/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forge-miscellaneous-http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: global-api-dev.simpleonlinehealthcare.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forge-miscellaneous-develop
            port:
              number: 80
